load("@cc_config//:MACROS.bzl", "repo_paths")

PROD_REPOS = [
    "@liblogc//src:logc",
    "@libs7//src:s7",
    "@uthash//src:uthash",
]

repo_paths(
    name = "repo_paths",
    repos = PROD_REPOS
)

repo_paths(
    name = "test_repo_paths",
    repos = PROD_REPOS + [
        "@gopt//src:gopt",
        "@libs7//plugin:s7plugin_test_config",
        "@unity//src:unity",
    ]
)
