load("@makeheaders//rules:makeheaders.bzl", "makeheaders")
load("@libs7//plugin:MACROS.bzl", "s7_plugin", "s7_library")

# dune:read produces an alist. corrects the following reader errors in
# dune files: bad dot e.g. (run %{exe:test_clic.exe} .); end-of-line
# string literals e.g. "\| this is a string

load("//config/cc:CONFIG.bzl",
     "BASE_COPTS",
     "BASE_LINKOPTS",
     "PROFILE",
     "define_module_version")

DEPS = ["@uthash//lib:uthash"]
COPTS    = BASE_COPTS
LINKOPTS = BASE_LINKOPTS

# TOOLCHAINS = ["//:module_profiles"]

##########
s7_plugin(
    name  = "dune_s7",
    srcs = [
        "dune_s7.c",
        "dunefile_reader.c",
        ":mkhdrs",
    ],
    hdrs = ["dune_s7.h"],
    includes = ["."],
    deps = DEPS,
    copts = COPTS + [
        # "-I$(GENDIR)/$(@)/src",
        # "'-D$(MODULE_NAME)_VERSION=\"$(MODULE_VERSION)\"'"
    ],
    defines = PROFILE + select({
        ## for strdup, strndup:
        "@platforms//os:linux": ["_POSIX_C_SOURCE=200809L"],
        "//conditions:default": []
    }),
    local_defines = define_module_version(),
    # toolchains = TOOLCHAINS,
    visibility = ["//visibility:public"]
)

################################################################
makeheaders(
    name             = "mkhdrs",
    hdrs_renamed = {"dune_s7.c": "dune_s7_internal.h"},
    hdrs_srcs        = ["dunefile_reader.c"],
    additional_srcs  = ["@makeheaders//logging:ansi_colors.h"]
    + select({
        "@makeheaders//compilation_mode:fastbuild": [
            "@makeheaders//logging:macros_debug.h"
        ],
        "//conditions:default": [
            "@makeheaders//logging:macros_ndebug.h"
        ]
    }) + select({
        "@makeheaders//compilation_mode:fastbuild": [
            "@libs7//logging:s7_macros_debug.h"
        ],
        "//conditions:default": [
            "@libs7//logging:s7_macros_ndebug.h"
        ]
    }),
)

makeheaders(
    name             = "export_hdr",
    out              = "dune_s7.h",
    export_interface = True,
    hdrs_srcs        = ["dune_s7.c", "dunefile_reader.c"],
    additional_srcs = [
        "@makeheaders//logging:ansi_colors.h"
    ] + select({
        "@makeheaders//compilation_mode:fastbuild": [
            "@libs7//logging:s7_macros_debug.h",
            "@makeheaders//logging:macros_debug.h"
        ],
        "//conditions:default": [
            "@libs7//logging:s7_macros_ndebug.h",
            "@makeheaders//logging:macros_ndebug.h"
        ]
    }),
)
