load("@makeheaders//src:RULES.bzl", "makeheaders")
load("@libs7//plugin:MACROS.bzl", "s7_plugin", "s7_library")

# dune:read produces an alist. corrects the following reader errors in
# dune files: bad dot e.g. (run %{exe:test_clic.exe} .); end-of-line
# string literals e.g. "\| this is a string

load("//config/cc:CONFIG.bzl",
     "BASE_SRCS", "BASE_DEPS",
     "BASE_COPTS", "BASE_INCLUDE_PATHS",
     "BASE_DEFINES", "BASE_LINKOPTS")

SRCS = []
DEPS = BASE_DEPS + ["@uthash//src:uthash"]
INCLUDE_PATHS = BASE_INCLUDE_PATHS + ["-I$(@uthash)/src"]
COPTS         = BASE_COPTS + INCLUDE_PATHS
# DEFINES       = select({
#     "//config/profile:dev?": ["DEVBUILD"],
#     "//conditions:default": []
# }) + select({
#     "//config/trace:trace?": ["TRACING"],
#     "//conditions:default": []
# }) + ["DEBUG_$(COMPILATION_MODE)"]

DEFINES  = BASE_DEFINES
LINKOPTS = BASE_LINKOPTS

TOOLCHAINS = ["//:repo_paths"]

# for testing
exports_files(["ansi_colors.h", "macros_debug.h", "macros_ndebug.h"])

##########
s7_plugin(
    name  = "dune_s7",
    srcs = SRCS + [
        "dune_s7.c",
        "dunefile_reader.c",
        ":mkhdrs",
    ],
    deps = DEPS,
    copts = COPTS + [
        "-I$(GENDIR)/$(@)/src"
    ],
    local_defines = DEFINES,
    toolchains = TOOLCHAINS,
    visibility = ["//visibility:public"]
)

################################################################
makeheaders(
    name             = "mkhdrs",
    hdrs_srcs        = ["dune_s7.c", "dunefile_reader.c"],
    additional_srcs  = [":ansi_colors.h"] + select({
        "//config/compilation_mode:fastbuild?": [
            ":macros_debug.h"
        ],
        "//conditions:default": [
            ":macros_ndebug.h"
        ]
    })
)

# makeheaders(
#     name             = "export_hdr",
#     out              = "dune_s7.h",
#     export_interface = True,
#     hdrs_srcs        = [
#         "dune_s7.c",
#     ],
#     additional_srcs = [
#         ":macros_ndebug.h"
#     ]
# )
