exports_files(["macros.h"])

# load("//config/cc:CONFIG.bzl",
#      "BASE_SRCS", "BASE_DEPS",
#      "BASE_COPTS", "BASE_INCLUDE_PATHS",
#      "BASE_DEFINES", "BASE_LINKOPTS")

# SRCS          = BASE_SRCS
# DEPS          = BASE_DEPS + [
#     "//src:dune_s7",
#     "@gopt//src:gopt",
#     "@unity//src:unity",
#     "@uthash//src:uthash",
# ]

# INCLUDE_PATHS = BASE_INCLUDE_PATHS + [
#     "-Isrc",
#     "-I$(@gopt)/src",
#     "-I$(@unity)/src",
#     "-I$(@uthash)/src",
#     "-I$(GENDIR)/$(@s7_tools)/src",

#     # "-Isrc",
#     # "-Iconfig",
#     # "-Iexternal/gopt~{}/src".format(GOPT_VERSION),
#     # "-Iexternal/unity~{}/src".format(UNITY_VERSION),
#     # "-Iexternal/uthash~{}/src".format(UTHASH_VERSION),
# ]

# COPTS         = BASE_COPTS + INCLUDE_PATHS
# DEFINES       = BASE_DEFINES
# LINKOPTS      = BASE_LINKOPTS
# TOOLCHAINS = ["//:test_repo_paths"]
# TAGS = ["sexp", "readers"]
# TIMEOUT = "short"

################################################################
test_suite(
    name  = "test",
    tests = [
        "//test/baddot",
        "//test/include",
        "//test/readers:file",
    ]
)
