load("@makeheaders//rules:makeheaders.bzl", "makeheaders")

load("//config/cc:CONFIG.bzl",
     "BASE_COPTS",
     "BASE_LINKOPTS",
     "PROFILE")

load("//test:CONFIG.bzl",
     "TEST_SRCS",
     "TEST_INCLUDE_PATHS",
     # "TEST_TOOLCHAINS",
     "TEST_TIMEOUT", "TEST_TAGS")

SRCS = TEST_SRCS
DEPS = ["@libs7//plugin:s7plugin_test_config",
        "@libs7//lib:s7",
        "@liblogc//lib:logc",
        "@unity//lib:unity",
        "//lib:dune_s7"]
INCLUDE_PATHS = TEST_INCLUDE_PATHS + [
]
COPTS         = BASE_COPTS + INCLUDE_PATHS + [
    "-I$(GENDIR)/test"
]
DEFINES       = PROFILE
LINKOPTS      = BASE_LINKOPTS
# TOOLCHAINS    = TEST_TOOLCHAINS
TAGS          = TEST_TAGS + ["readers"]
TIMEOUT       = TEST_TIMEOUT

exports_files(["macros.h"])

################################################################
test_suite(
    name  = "test",
    tests = [
        "//test/baddot",
        "//test/dune-package",
        "//test/include",
        "//test/multiline_strings",
        "//test/readers",
    ]
)

################################################################
cc_library(
    name = "tmain",
    linkstatic = True,
    srcs = SRCS + ["test_main.c"],
    defines = DEFINES,
    # data = [
    #     "//test/baddot/case010:data",
    #     "//test/baddot/case020:data",
    #     "//test/baddot/case030:data",
    # ],
    deps = DEPS + [
        "@gopt//lib:gopt",
        ":test_functions"
    ],
    copts = COPTS,
    linkopts = LINKOPTS,
    # toolchains = TOOLCHAINS,
    # timeout = TIMEOUT,
    # tags = TAGS + ["readers"]
    visibility = ["//test:__subpackages__"]
)

cc_library(
    name = "test_functions",
    linkstatic = True,
    srcs = SRCS + ["test_functions.c", ":mkhdrs"],
    defines = DEFINES,
    deps = DEPS,
    copts = COPTS + select({
        "@platforms//os:macos": [
            # "-Wno-gnu-statement-expression-from-macro-expansion"
        ],
        "//conditions:default": []
    }),
    linkopts = LINKOPTS,
    # toolchains = TOOLCHAINS,
    visibility = ["//test:__subpackages__"]
)

################################################################
makeheaders(
    name             = "mkhdrs",
    hdrs_srcs        = [
        "test_functions.c",
        "test_main.c",
        "//test/baddot:baddot_test.c",
        "//test/include:include_test.c"
    ],
    additional_srcs  = ["@makeheaders//logging:ansi_colors.h"]
    + select({
        "@makeheaders//compilation_mode:fastbuild": [
            "@makeheaders//logging:macros_debug.h"
        ],
        "//conditions:default": [
            "@makeheaders//logging:macros_ndebug.h"
        ]
    }) + select({
        "@makeheaders//compilation_mode:fastbuild": [
            "@libs7//logging:s7_macros_debug.h"
        ],
        "//conditions:default": [
            "@libs7//logging:s7_macros_ndebug.h"
        ]
    }),
)
