load("//config/cc:CONFIG.bzl",
     "BASE_SRCS", "BASE_DEPS",
     "BASE_COPTS", "BASE_INCLUDE_PATHS",
     "BASE_DEFINES", "BASE_LINKOPTS")

SRCS          = BASE_SRCS + [
    "//test:macros.h", "//src:trace_dev.h"
]
DEPS          = BASE_DEPS + [
    "@s7_tools//src:s7plugin_test_config",
    "//src:dune_s7",
    "@gopt//src:gopt",
    "@unity//src:unity",
    "@uthash//src:uthash",
]

INCLUDE_PATHS = BASE_INCLUDE_PATHS + [
    "-Isrc",
    "-Itest",
    "-I$(@gopt)/src",
    "-I$(@unity)/src",
    "-I$(@uthash)/src",
    "-I$(GENDIR)/$(@s7_tools)/src",
]

COPTS         = BASE_COPTS + INCLUDE_PATHS
DEFINES       = BASE_DEFINES
LINKOPTS      = BASE_LINKOPTS
TOOLCHAINS = ["//:test_repo_paths"]
TAGS = ["sexp", "readers"]
TIMEOUT = "short"

# make test files in subdirs accessible from this pkg
# exports_files(glob(["case010/*"]))

################################################################
cc_test(
    name = "baddot",
    linkstatic = True,
    srcs = SRCS + ["baddot_test.c"],
    local_defines = DEFINES,
    data = [
        "//test/baddot/case010:data",
        "//test/baddot/case020:data",
        "//test/baddot/case030:data",
    ],
    deps = DEPS,
    copts = COPTS,
    linkopts = LINKOPTS,
    toolchains = TOOLCHAINS,
    timeout = TIMEOUT,
    tags = TAGS + ["readers"]
)
