load("//config/cc:CONFIG.bzl", "BASE_COPTS", "BASE_LINKOPTS")
load("//test:CONFIG.bzl",
     "TEST_SRCS", "TEST_DEPS", "TEST_INCLUDE_PATHS",
     "TEST_TOOLCHAINS",
     "TEST_TIMEOUT", "TEST_TAGS")

SRCS = TEST_SRCS
DEPS = TEST_DEPS
INCLUDE_PATHS = TEST_INCLUDE_PATHS
COPTS         = BASE_COPTS + INCLUDE_PATHS
DEFINES       = []
LINKOPTS      = BASE_LINKOPTS
TOOLCHAINS    = TEST_TOOLCHAINS
TAGS          = TEST_TAGS + ["readers"]
TIMEOUT       = TEST_TIMEOUT

################################################################
cc_test(
    name = "baddot",
    linkstatic = True,
    srcs = SRCS + ["baddot_test.c"],
    local_defines = DEFINES,
    data = [
        "//test/baddot/case010:data",
        "//test/baddot/case020:data",
        "//test/baddot/case030:data",
    ],
    deps = DEPS,
    copts = COPTS,
    linkopts = LINKOPTS,
    toolchains = TOOLCHAINS,
    timeout = TIMEOUT,
    tags = TAGS + ["readers"]
)
