load("//config/cc:CONFIG.bzl",
     "BASE_SRCS", "BASE_DEPS",
     "BASE_COPTS", "BASE_INCLUDE_PATHS",
     "BASE_DEFINES", "BASE_LINKOPTS")

SRCS          = BASE_SRCS + [
    "//test:macros.h", "//src:trace_dev.h"
]
DEPS          = BASE_DEPS + [
    "@s7_tools//src:s7plugin_test_config",
    "//src:dune_s7",
    "@gopt//src:gopt",
    "@unity//src:unity",
    "@uthash//src:uthash",
]

INCLUDE_PATHS = BASE_INCLUDE_PATHS + [
    "-Isrc",
    "-Itest",
    "-I$(@gopt)/src",
    "-I$(@unity)/src",
    "-I$(@uthash)/src",
    "-I$(GENDIR)/$(@s7_tools)/src",
]

COPTS         = BASE_COPTS + INCLUDE_PATHS
DEFINES       = BASE_DEFINES
LINKOPTS      = BASE_LINKOPTS
TOOLCHAINS = ["//:test_repo_paths"]
TIMEOUT = "short"
TAGS = ["sexp", "readers", "read-errrors"]

# make test files in subdirs accessible from this pkg
# exports_files(glob(["case010/*"]))

################################################################
cc_test(
    name = "include",
    linkstatic = True,
    srcs = SRCS + ["Include_test.c"],
            # "//test/unit:common.c", "//test/unit:common.h",
            # "//src:libs7.h"],
    local_defines = DEFINES,
    deps = DEPS + [
        # "//lib/libsexp:dune_s7_archive",
    ],
    copts = COPTS + [
        "-Wno-gnu-statement-expression"
        # "-Isrc",
        # "-Idev",
        # "-Itest/unit",
        # "-I$(GENDIR)/lib/libtoml",
        # "-I$(GENDIR)/external/libs7/lib/libtoml",
        # "-fno-pie"
    ],
    data = [
        "//test/include/case010:data",
        "//test/include/case011:data",
        "//test/include/case013:data",
        "//test/include/case015:data",
        "//test/include/case016:data",

        "//test/include/case020:data",
        "//test/include/case022:data",
        "//test/include/case023:data",
        "//test/include/case024:data",
        "//test/include/case025:data",
        "//test/include/case026:data",

        "//test/include/case040:data",
        "//test/include/case042:data",
        "//test/include/case050:data",
    ],
    linkopts = LINKOPTS,
    toolchains = TOOLCHAINS,
    timeout = TIMEOUT,
    tags = TAGS + ["readers"]
)
