load("//config/cc:CONFIG.bzl", "BASE_COPTS", "BASE_LINKOPTS")
load("//test:CONFIG.bzl",
     "TEST_SRCS", "TEST_DEPS", "TEST_INCLUDE_PATHS",
     "TEST_TOOLCHAINS",
     "TEST_TIMEOUT", "TEST_TAGS")

SRCS = TEST_SRCS
DEPS = TEST_DEPS
INCLUDE_PATHS = TEST_INCLUDE_PATHS
COPTS         = BASE_COPTS + INCLUDE_PATHS
DEFINES       = ["DEBUG_$(COMPILATION_MODE)"]
LINKOPTS      = BASE_LINKOPTS
TOOLCHAINS    = TEST_TOOLCHAINS
TAGS          = TEST_TAGS + ["multiline_strings"]
TIMEOUT       = TEST_TIMEOUT

exports_files(["multiline_test.c"])

test_suite(
    name  = "multiline_strings",
    tests = [
        "//test/multiline_strings/case010:test",
        "//test/multiline_strings/case013:test",
        "//test/multiline_strings/case016:test",
        "//test/multiline_strings/case020:test",
        "//test/multiline_strings/case022:test",
    ]
)
