load("//config/cc:CONFIG.bzl", "BASE_COPTS", "BASE_LINKOPTS")
load("//test:CONFIG.bzl",
     "TEST_SRCS", "TEST_DEPS", "TEST_INCLUDE_PATHS",
     "TEST_TOOLCHAINS",
     "TEST_TIMEOUT", "TEST_TAGS")

SRCS = TEST_SRCS
DEPS = TEST_DEPS
INCLUDE_PATHS = TEST_INCLUDE_PATHS
COPTS         = BASE_COPTS + INCLUDE_PATHS
DEFINES       = ["DEBUG_$(COMPILATION_MODE)"]
LINKOPTS      = BASE_LINKOPTS
TOOLCHAINS    = TEST_TOOLCHAINS
TAGS          = TEST_TAGS + ["readers", "readers", "read-errrors"]
TIMEOUT       = TEST_TIMEOUT

################################################################
cc_test(
    name = "file",
    linkstatic = True,
    srcs = SRCS + ["file_readers_test.c"],
    local_defines = DEFINES,
    data = [
        "case010.dune", "case010.expected",
        "case020.dune", "case020.expected"
    ],
    deps = DEPS,
    copts = COPTS + [
        "-Wno-gnu-statement-expression"
    ],
    linkopts = LINKOPTS,
    toolchains = TOOLCHAINS,
    timeout = TIMEOUT,
    tags = TAGS
)
