filegroup(
    name = "data",
    data = ["dune", "sexp.expected"],
    visibility = ["//visibility:public"]
)

load("//config/cc:CONFIG.bzl", "BASE_COPTS", "BASE_LINKOPTS")
load("//test:CONFIG.bzl",
     "TEST_SRCS", "TEST_DEPS", "TEST_INCLUDE_PATHS",
     "TEST_TIMEOUT", "TEST_TAGS")

SRCS = TEST_SRCS
DEPS = TEST_DEPS + ["//test:tmain"]
INCLUDE_PATHS = TEST_INCLUDE_PATHS
COPTS         = BASE_COPTS + INCLUDE_PATHS
DEFINES       = ["PROFILE_$(COMPILATION_MODE)"]
LINKOPTS      = BASE_LINKOPTS
TAGS          = TEST_TAGS + ["readers", "read-errors"]
TIMEOUT       = TEST_TIMEOUT

cc_test(
    name = "test",
    # linkstatic = True,
    srcs = SRCS + ["//test/readers:readers_test.c"],
    local_defines = DEFINES,
    deps = ["//test:tmain"], # DEPS,
    copts = COPTS + [
        "-Wno-gnu-statement-expression",
        "-DCASE='\"020\"'",
        "-I$(GENDIR)/test"
    ],
    data = [":data"],
    linkopts = LINKOPTS,
    timeout = TIMEOUT,
    tags = TAGS + ["readers"]
)
